--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
       .nav-links {
         display: flex;
         justify-content: center;
-        gap: 60px;
+        gap: 40px;
         list-style: none;
         align-items: center;
+        flex-wrap: wrap;
       }
 
       .nav-links a {
@@ -38,7 +39,7 @@
         font-weight: bold;
         text-transform: uppercase;
         letter-spacing: 2px;
-        padding: 10px 20px;
+        padding: 8px 14px;
         transition: all 0.3s ease;
       }
 
@@ -47,255 +48,23 @@
         border-radius: 5px;
       }
 
-      .nav-links a.active {
-        background: rgba(255, 255, 255, 0.3);
-        border-radius: 5px;
-      }
-
-      /* Hamburger menu */
       .hamburger {
-        color: #000;
-        font-size: 24px;
-        font-weight: bold;
-      }
-
-      /* Main content */
-      .main-content {
-        padding: 80px 60px;
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-
-      .page-title {
-        font-size: 72px;
-        font-weight: 900;
-        color: #000;
-        margin-bottom: 40px;
-        letter-spacing: 8px;
-        text-transform: uppercase;
-        text-align: center;
-      }
-
-      .intro-text {
-        font-size: 18px;
-        line-height: 1.6;
-        color: #333;
-        margin-bottom: 60px;
-        text-align: center;
-        max-width: 800px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      /* Menu Section */
-      .menu-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-        gap: 40px;
-        margin-bottom: 80px;
-      }
-
-      .menu-item {
-        background: rgba(255, 255, 255, 0.9);
-        border-radius: 15px;
-        overflow: hidden;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        transition: all 0.3s ease;
-      }
-
-      .menu-item:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
-      }
-
-      .menu-item-image {
-        height: 200px;
-        background: linear-gradient(45deg, #4d96ff, #6bcf7f, #ffd93d);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 48px;
-        position: relative;
-      }
-
-      .menu-item-content {
-        padding: 30px;
-      }
-
-      .menu-item h3 {
-        font-size: 20px;
-        font-weight: bold;
-        color: #000;
-        margin-bottom: 10px;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-      }
-
-      .menu-item .price {
-        font-size: 20px;
-        font-weight: bold;
-        color: #ff6b6b;
-        margin-bottom: 15px;
-      }
-
-      .menu-item p {
-        font-size: 16px;
-        line-height: 1.5;
-        color: #555;
-        margin-bottom: 20px;
-      }
-
-      .order-btn {
-        background-color: #ff6b6b;
-        color: white;
-        border: none;
-        padding: 12px 30px;
-        font-size: 16px;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 1px;
+        display: none; /* hidden on desktop */
+        font-size: 28px;
         cursor: pointer;
-        border-radius: 5px;
-        width: 100%;
-        transition: all 0.3s ease;
       }
 
-      .order-btn:hover {
-        background-color: #ff5252;
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      }
-
-      /* Bottom section matching homepage */
-      .bottom-section {
-        text-align: center;
-        margin-top: 80px;
-      }
-
-      .lorem-title-small {
-        font-size: 48px;
-        font-weight: 900;
-        color: #000;
-        margin-bottom: 30px;
-        letter-spacing: 6px;
-        text-transform: uppercase;
-      }
-
-      .click-me-btn {
-        background-color: #ff6b6b;
-        color: white;
-        border: none;
-        padding: 15px 40px;
-        font-size: 16px;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        cursor: pointer;
-        border-radius: 5px;
-        transition: all 0.3s ease;
-      }
-
-      .click-me-btn:hover {
-        background-color: #ff5252;
-        transform: translateY(-2px);
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      }
-
-      /* Responsive Design */
-      @media (max-width: 1024px) {
-        .page-title {
-          font-size: 56px;
-          letter-spacing: 4px;
-        }
-
-        .main-content {
-          padding: 60px 40px;
-        }
-
-        .nav-links {
-          gap: 40px;
-        }
-
-        .lorem-title-small {
-          font-size: 40px;
-          letter-spacing: 4px;
-        }
-      }
-
-      @media (max-width: 768px) {
-        .page-title {
-          font-size: 42px;
-          letter-spacing: 2px;
-          margin-bottom: 30px;
-        }
-
-        .main-content {
-          padding: 40px 30px;
-        }
-
-        .menu-grid {
-          grid-template-columns: 1fr;
-          gap: 30px;
-        }
-
-        .lorem-title-small {
-          font-size: 32px;
-          letter-spacing: 2px;
-        }
-
-        .nav-links {
-          flex-wrap: wrap;
-          gap: 20px;
-        }
-
-        .nav-links a {
-          font-size: 14px;
-          padding: 8px 12px;
-        }
-      }
-
-      @media (max-width: 480px) {
-        .page-title {
-          font-size: 32px;
-          letter-spacing: 1px;
-        }
-
-        .main-content {
-          padding: 30px 20px;
-        }
-
-        .menu-item-content {
-          padding: 20px;
-        }
-
-        .lorem-title-small {
-          font-size: 24px;
-          letter-spacing: 1px;
-        }
-
-        .nav-links a {
-          font-size: 12px;
-          padding: 6px 10px;
-        }
-
-        .click-me-btn {
-          padding: 12px 30px;
-          font-size: 14px;
-        }
-      }
-
+      /* First page */
       #firstpage {
-        height: 90vh;
-
         display: flex;
+        height: 90vh;
       }
 
       #left,
       #right {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
-
         height: 100%;
         width: 50%;
       }
@@ -307,144 +76,160 @@
       #right img {
         height: 100%;
         width: 100%;
+        object-fit: cover;
       }
 
       #container {
-        height: 70%;
         width: 70%;
-        font-size: larger;
       }
 
       #container section {
-        height: 33.33%;
+        margin: 15px 0;
       }
 
-      section {
-        display: flex;
-        justify-content: left;
-        align-items: center;
+      .lorem-title-small {
+        font-size: 36px;
+        font-weight: 900;
+        letter-spacing: 6px;
+      }
+
+      .gradient-textbox {
+        background: linear-gradient(to right, #fdf2a5, #ffc6c7);
+        padding: 20px;
+        border-radius: 10px;
+        font-size: 16px;
+        line-height: 1.6;
+        color: #333;
       }
 
       section button {
         background-color: #ff6b6b;
         color: white;
         border: none;
-        padding: 10px 20px;
-        font-size: 12px;
-
-        text-transform: uppercase;
-        letter-spacing: 1px;
+        padding: 12px 24px;
+        font-size: 14px;
         cursor: pointer;
-        width: 35%;
-        transition: all 0.3s ease;
+        border-radius: 5px;
       }
 
-      section > span {
-        font-weight: bolder;
-
-        font-size: xx-large;
-        width: 100%;
-        letter-spacing: 8px;
-      }
-
+      /* Second page */
       #secondpage {
         height: 100vh;
-
         background-image: linear-gradient(to right, #fef7ad, #feb3ee);
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+        flex-wrap: wrap;
       }
 
-      .left {
-        height: 100vh;
-        width: 50vw;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        padding: 10px;
-      }
-
+      .left,
       .right {
-        height: 100vh;
-        width: 50vw;
+        width: 50%;
         display: flex;
-        justify-content: left;
+        justify-content: center;
         align-items: center;
         padding: 10px;
       }
 
       .left aside {
-        padding: 20px;
-        height: 70%;
-        width: 80%;
         display: flex;
-
-        padding: 10px;
+        width: 90%;
+        gap: 10px;
       }
 
       aside section {
-        margin: 10px;
-        height: 100%;
-        width: 50%;
-
+        flex: 1;
         display: flex;
-        justify-content: space-evenly;
-        align-items: center;
         flex-direction: column;
+        gap: 10px;
       }
 
-      aside section main {
-        padding: 10px;
-
-        height: 50%;
+      aside section main img,
+      #bigpic img {
         width: 100%;
-      }
-
-      #bigpic {
-        padding: 10px;
+        height: 100%;
+        border-radius: 10px;
+        object-fit: cover;
       }
 
       .right main {
         display: flex;
-        justify-content: left;
-        align-items: left;
         flex-direction: column;
-        height: 35%;
-        width: 65%;
-
-        position: relative;
-        left: -50px;
+        gap: 15px;
         background-color: #ff7070;
+        padding: 20px;
+        border-radius: 10px;
+        width: 80%;
       }
 
-      .right main section {
-        padding: 10px;
+      /* Responsive */
+      @media (max-width: 1024px) {
+        #firstpage {
+          flex-direction: column;
+          height: auto;
+        }
+        #left,
+        #right {
+          width: 100%;
+          height: auto;
+        }
+        #right img {
+          height: 300px;
+        }
+        #secondpage {
+          flex-direction: column;
+          height: auto;
+          padding: 40px 20px;
+        }
+        .left,
+        .right {
+          width: 100%;
+          height: auto;
+        }
+        .lorem-title-small {
+          font-size: 28px;
+          text-align: center;
+        }
       }
-      .gradient-textbox {
-  background: linear-gradient(to right, #fdf2a5, #ffc6c7);
-  padding: 30px;
-  border-radius: 10px;
-  font-size: 18px;
-  line-height: 1.6;
-  color: #333;
-  max-width: 700px;
-  margin: auto;
-}
 
+      @media (max-width: 600px) {
+        .nav-links {
+          display: none; /* hide links */
+          flex-direction: column;
+          gap: 15px;
+          background: #ff7070;
+          padding: 20px;
+        }
+        .nav-links.show {
+          display: flex; /* show when toggled */
+        }
+        .hamburger {
+          display: block; /* show hamburger */
+        }
+        #right img {
+          height: 200px;
+        }
+        .lorem-title-small {
+          font-size: 24px;
+        }
+        .gradient-textbox {
+          font-size: 14px;
+          padding: 15px;
+        }
+      }
     </style>
   </head>
   <body>
     <header class="nav-header">
       <nav>
-        <ul class="nav-links">
+        <span class="hamburger" onclick="toggleMenu()">☰</span>
+        <ul class="nav-links" id="navLinks">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#" >Order</a></li>
+          <li><a href="#">Order</a></li>
           <li><a href="#">Food</a></li>
           <li><a href="#">Restaurant</a></li>
           <li><a href="#">Testimonials</a></li>
           <li><a href="#">Contact Us</a></li>
-          <li><span class="hamburger">≡</span></li>
         </ul>
       </nav>
     </header>
@@ -452,15 +237,12 @@
     <div id="firstpage">
       <div id="left">
         <div id="container">
-          <section><h2 class="lorem-title-small">LOREM IPSUM</h2></section><br><br>
+          <section><h2 class="lorem-title-small">LOREM IPSUM</h2></section>
           <section class="gradient-textbox">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id est vitae
-  dolor rhoncus tristique. Maecenas metus quam, rhoncus euismod lorem in,
-  sollicitudin viverra eros. Donec dictum luctus quam ut tristique. Curabitur
-  nec faucibus purus. Quisque congue sem nec justo mollis, in tincidunt erat
-  pretium. Sed pulvinar, massa ac porta viverra.
-</section>
-
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id
+            est vitae dolor rhoncus tristique. Maecenas metus quam, rhoncus
+            euismod lorem in, sollicitudin viverra eros.
+          </section>
           <section>
             <button>Click Me</button>
           </section>
@@ -476,29 +258,14 @@
         <aside>
           <section>
             <main>
-              <img
-                src="stag.jpg"
-                alt=""
-                height="100%"
-                width="100%"
-              />
+              <img src="stag.jpg" alt="" />
             </main>
             <main>
-              <img
-                src="food.jpg"
-                alt=""
-                height="100%"
-                width="100%"
-              />
+              <img src="food.jpg" alt="" />
             </main>
           </section>
           <section id="bigpic">
-            <img
-              src="jana.jpg"
-              alt=""
-              height="100%"
-              width="100%"
-            />
+            <img src="jana.jpg" alt="" />
           </section>
         </aside>
       </div>
@@ -506,50 +273,17 @@
         <main>
           <section>LOREM IPSUM</section>
           <section>
-            <h2 class="lorem-title-small" style="text-align: left">
-              LOREM IPSUM SET ADMEMIR
-            </h2>
+            <h2 class="lorem-title-small">LOREM IPSUM SET ADMEMIR</h2>
           </section>
-          <section style="position: relative; top: -30px">
-            click
-            <span
-              ><img
-                src="./icons8-arrow-30.png"
-                alt=""
-                style="height: 20px; width: 20px; padding-left: 5px"
-            /></span>
-          </section>
+          <section>click <img src="icons8-arrow-30.png" alt="" /></section>
         </main>
       </div>
     </div>
+
+    <script>
+      function toggleMenu() {
+        document.getElementById("navLinks").classList.toggle("show");
+      }
+    </script>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
