--- a/index.html
+++ b/index.html
@@ -1,289 +1,296 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant - Order Food</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Restaurant - Order Food</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      min-height: 100vh;
+    }
+
+    /* Navigation Header */
+    .nav-header {
+      background-color: #ff7070;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    .nav-links {
+      display: flex;
+      justify-content: center;
+      gap: 60px;
+      list-style: none;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .nav-links a {
+      color: #000;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      padding: 10px 20px;
+      transition: all 0.3s ease;
+    }
+
+    .nav-links a:hover {
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 5px;
+    }
+
+    .nav-links a.active {
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 5px;
+    }
+
+    /* Hamburger menu */
+    .hamburger {
+      color: #000;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    /* First Page */
+    #firstpage {
+      min-height: 90vh;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    #left,
+    #right {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1 1 50%;
+      padding: 20px;
+    }
+
+    #left {
+      background-image: linear-gradient(to right, #fdf2a5, #ffc6c7);
+    }
+
+    #right img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    #container {
+      max-width: 500px;
+      width: 100%;
+      font-size: larger;
+    }
+
+    #container section {
+      margin-bottom: 20px;
+    }
+
+    section button {
+      background-color: #ff6b6b;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 14px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: all 0.3s ease;
+    }
+
+    section button:hover {
+      background-color: #ff5252;
+    }
+
+    section > span {
+      font-weight: bolder;
+      font-size: xx-large;
+      width: 100%;
+      letter-spacing: 8px;
+    }
+
+    .gradient-textbox {
+      background: linear-gradient(to right, #fdf2a5, #ffc6c7);
+      padding: 20px;
+      border-radius: 10px;
+      font-size: 16px;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    /* Second Page */
+    #secondpage {
+      min-height: 100vh;
+      background-image: linear-gradient(to right, #fef7ad, #feb3ee);
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
+
+    .left,
+    .right {
+      flex: 1 1 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 15px;
+    }
+
+    .left aside {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      width: 100%;
+      max-width: 600px;
+    }
+
+    aside section {
+      flex: 1 1 45%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    aside section img,
+    #bigpic img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    .right main {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      background-color: #ff7070;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 400px;
+      color: white;
+    }
+
+    .right main section {
+      padding: 5px 0;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      #firstpage, #secondpage {
+        flex-direction: column;
       }
 
-      body {
-        font-family: Arial, sans-serif;
-        min-height: 100vh;
-      }
-
-      /* Navigation Header */
-      .nav-header {
-        background-color: #ff7070;
-        padding: 20px 0;
+      #left, #right, .left, .right {
+        flex: 1 1 100%;
         text-align: center;
       }
 
+      #container {
+        font-size: medium;
+      }
+
       .nav-links {
-        display: flex;
-        justify-content: center;
-        gap: 40px;
-        list-style: none;
-        align-items: center;
-        flex-wrap: wrap;
+        gap: 20px;
       }
 
       .nav-links a {
-        color: #000;
-        text-decoration: none;
-        font-size: 18px;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        padding: 8px 14px;
-        transition: all 0.3s ease;
-      }
-
-      .nav-links a:hover {
-        background: rgba(255, 255, 255, 0.2);
-        border-radius: 5px;
-      }
-
-      .hamburger {
-        display: none; /* hidden on desktop */
-        font-size: 28px;
-        cursor: pointer;
-      }
-
-      /* First page */
-      #firstpage {
-        display: flex;
-        height: 90vh;
-      }
-
-      #left,
-      #right {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        width: 50%;
-      }
-
-      #left {
-        background-image: linear-gradient(to right, #fdf2a5, #ffc6c7);
-      }
-
-      #right img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-      }
-
-      #container {
-        width: 70%;
-      }
-
-      #container section {
-        margin: 15px 0;
-      }
-
-      .lorem-title-small {
-        font-size: 36px;
-        font-weight: 900;
-        letter-spacing: 6px;
+        font-size: 14px;
+        padding: 8px 12px;
       }
 
       .gradient-textbox {
-        background: linear-gradient(to right, #fdf2a5, #ffc6c7);
-        padding: 20px;
-        border-radius: 10px;
-        font-size: 16px;
-        line-height: 1.6;
-        color: #333;
+        font-size: 14px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .nav-links a {
+        font-size: 12px;
       }
 
       section button {
-        background-color: #ff6b6b;
-        color: white;
-        border: none;
-        padding: 12px 24px;
-        font-size: 14px;
-        cursor: pointer;
-        border-radius: 5px;
-      }
-
-      /* Second page */
-      #secondpage {
-        height: 100vh;
-        background-image: linear-gradient(to right, #fef7ad, #feb3ee);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-wrap: wrap;
-      }
-
-      .left,
-      .right {
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;
-      }
-
-      .left aside {
-        display: flex;
-        width: 90%;
-        gap: 10px;
-      }
-
-      aside section {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-      }
-
-      aside section main img,
-      #bigpic img {
         width: 100%;
-        height: 100%;
-        border-radius: 10px;
-        object-fit: cover;
+      }
+
+      .gradient-textbox {
+        padding: 15px;
+        font-size: 13px;
       }
 
       .right main {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        background-color: #ff7070;
-        padding: 20px;
-        border-radius: 10px;
-        width: 80%;
+        max-width: 100%;
       }
+    }
+  </style>
+</head>
+<body>
+  <header class="nav-header">
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Order</a></li>
+        <li><a href="#">Food</a></li>
+        <li><a href="#">Restaurant</a></li>
+        <li><a href="#">Testimonials</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><span class="hamburger">≡</span></li>
+      </ul>
+    </nav>
+  </header>
 
-      /* Responsive */
-      @media (max-width: 1024px) {
-        #firstpage {
-          flex-direction: column;
-          height: auto;
-        }
-        #left,
-        #right {
-          width: 100%;
-          height: auto;
-        }
-        #right img {
-          height: 300px;
-        }
-        #secondpage {
-          flex-direction: column;
-          height: auto;
-          padding: 40px 20px;
-        }
-        .left,
-        .right {
-          width: 100%;
-          height: auto;
-        }
-        .lorem-title-small {
-          font-size: 28px;
-          text-align: center;
-        }
-      }
-
-      @media (max-width: 600px) {
-        .nav-links {
-          display: none; /* hide links */
-          flex-direction: column;
-          gap: 15px;
-          background: #ff7070;
-          padding: 20px;
-        }
-        .nav-links.show {
-          display: flex; /* show when toggled */
-        }
-        .hamburger {
-          display: block; /* show hamburger */
-        }
-        #right img {
-          height: 200px;
-        }
-        .lorem-title-small {
-          font-size: 24px;
-        }
-        .gradient-textbox {
-          font-size: 14px;
-          padding: 15px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <header class="nav-header">
-      <nav>
-        <span class="hamburger" onclick="toggleMenu()">☰</span>
-        <ul class="nav-links" id="navLinks">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Order</a></li>
-          <li><a href="#">Food</a></li>
-          <li><a href="#">Restaurant</a></li>
-          <li><a href="#">Testimonials</a></li>
-          <li><a href="#">Contact Us</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <div id="firstpage">
-      <div id="left">
-        <div id="container">
-          <section><h2 class="lorem-title-small">LOREM IPSUM</h2></section>
-          <section class="gradient-textbox">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id
-            est vitae dolor rhoncus tristique. Maecenas metus quam, rhoncus
-            euismod lorem in, sollicitudin viverra eros.
-          </section>
-          <section>
-            <button>Click Me</button>
-          </section>
-        </div>
-      </div>
-      <div id="right">
-        <img src="burger.jpg" alt="burger" />
+  <div id="firstpage">
+    <div id="left">
+      <div id="container">
+        <section><h2 class="lorem-title-small">LOREM IPSUM</h2></section>
+        <section class="gradient-textbox">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id est vitae
+          dolor rhoncus tristique. Maecenas metus quam, rhoncus euismod lorem in,
+          sollicitudin viverra eros. Donec dictum luctus quam ut tristique. Curabitur
+          nec faucibus purus. Quisque congue sem nec justo mollis, in tincidunt erat
+          pretium. Sed pulvinar, massa ac porta viverra.
+        </section>
+        <section><button>Click Me</button></section>
       </div>
     </div>
-
-    <div id="secondpage">
-      <div class="left">
-        <aside>
-          <section>
-            <main>
-              <img src="stag.jpg" alt="" />
-            </main>
-            <main>
-              <img src="food.jpg" alt="" />
-            </main>
-          </section>
-          <section id="bigpic">
-            <img src="jana.jpg" alt="" />
-          </section>
-        </aside>
-      </div>
-      <div class="right">
-        <main>
-          <section>LOREM IPSUM</section>
-          <section>
-            <h2 class="lorem-title-small">LOREM IPSUM SET ADMEMIR</h2>
-          </section>
-          <section>click <img src="icons8-arrow-30.png" alt="" /></section>
-        </main>
-      </div>
+    <div id="right">
+      <img src="burger.jpg" alt="burger" />
     </div>
+  </div>
 
-    <script>
-      function toggleMenu() {
-        document.getElementById("navLinks").classList.toggle("show");
-      }
-    </script>
-  </body>
+  <div id="secondpage">
+    <div class="left">
+      <aside>
+        <section><img src="stag.jpg" alt="" /></section>
+        <section><img src="food.jpg" alt="" /></section>
+        <section id="bigpic"><img src="jana.jpg" alt="" /></section>
+      </aside>
+    </div>
+    <div class="right">
+      <main>
+        <section>LOREM IPSUM</section>
+        <section>
+          <h2 class="lorem-title-small" style="text-align: left">
+            LOREM IPSUM SET ADMEMIR
+          </h2>
+        </section>
+        <section>
+          click
+          <span><img src="./icons8-arrow-30.png" alt="" style="height: 20px; width: 20px; padding-left: 5px" /></span>
+        </section>
+      </main>
+    </div>
+  </div>
+</body>
 </html>
